@startuml ClassDiagram_Increment1
title Class Diagram - Increment 1 (UC-01 s.d. UC-10)

skinparam classAttributeIconSize 0
skinparam classFontStyle Bold

' ===== AUTENTIKASI =====
class User {
  +id: int
  +name: string
  +email: string
  +password: string
  +is_active: bool
  +login(): bool
  +logout(): void
}

' ===== KATEGORI & SATUAN =====
class Category {
  +id: int
  +name: string
  +is_active: bool
}

class Unit {
  +id: int
  +name: string
  +alias: string
  +group: string
  +base_unit_id: int|null
  +conversion_factor: float|null
}
Unit "*" --> "0..1" Unit : base unit of

' ===== SUPPLIER =====
class Supplier {
  +id: int
  +name: string
  +description: string
  +contact_name: string
  +phone: string
  +street: string
  +landmark: string
  +maps_link: string
  +image: string
}

' ===== BAHAN BAKU =====
class Material {
  +id: int
  +name: string
  +description: string
  +image: string
  +status: string
  +is_active: bool
  +is_recipe: bool
  +minimum: float
}

class MaterialDetail {
  +id: int
  +material_id: int
  +unit_id: int
  +is_main: bool
  +quantity: float
  +supply_quantity: float
  +supply_price: decimal
}

class MaterialBatch {
  +id: int
  +material_id: int
  +unit_id: int
  +batch_number: string
  +date: date
  +batch_quantity: float
}

' ===== BELANJA =====
class Expense {
  +id: int
  +expense_number: string
  +expense_date: date
  +supplier_id: int
  +status: string
  +grand_total_expect: decimal
  +grand_total_actual: decimal
  +is_start: bool
  +is_finish: bool
}

class ExpenseDetail {
  +id: int
  +expense_id: int
  +material_id: int
  +unit_id: int
  +quantity_expect: float
  +quantity_get: float
  +price_expect: decimal
  +price_get: decimal
  +total_expect: decimal
  +total_actual: decimal
  +expiry_date: date
}

' ===== PRODUK =====
class Product {
  +id: int
  +name: string
  +description: string
  +price: decimal
  +stock: int
  +method: json
  +is_active: bool
  +pcs: int
  +pcs_capital: decimal
  +capital: decimal
}

class ProductComposition {
  +id: int
  +product_id: int
  +material_id: int
  +unit_id: int
  +material_quantity: float
}

class OtherCost {
  +id: int
  +product_id: int
  +type_cost_id: int
  +price: decimal
}

class TypeCost {
  +id: int
  +name: string
}

' ===== PRODUKSI =====
class Production {
  +id: int
  +production_number: string
  +transaction_id: int|null
  +method: string
  +date: date
  +time: time
  +status: string
  +is_start: bool
  +is_finish: bool
}

class ProductionDetail {
  +id: int
  +production_id: int
  +product_id: int
  +quantity_plan: float
  +quantity_get: float
  +quantity_fail: float
  +cycle: int
}

class ProductionWorker {
  +id: int
  +production_id: int
  +user_id: int
}

' ===== TRANSAKSI =====
class Transaction {
  +id: int
  +user_id: int
  +invoice_number: string
  +name: string
  +phone: string
  +date: date
  +time: time
  +payment_status: string
  +status: string
  +method: string
  +total_amount: decimal
  +created_by_shift: int
}

class TransactionDetail {
  +id: int
  +transaction_id: int
  +product_id: int
  +quantity: int
  +price: decimal
  +pcs_capital_snapshot: decimal
}

class Payment {
  +id: int
  +receipt_number: string
  +transaction_id: int
  +payment_channel_id: int
  +payment_method: string
  +payment_group: string
  +paid_amount: decimal
  +paid_at: datetime
}

class PaymentChannel {
  +id: int
  +type: string
  +group: string
  +bank_name: string
  +account_number: string
  +account_name: string
  +qris_image: string
  +is_active: bool
}

' ===== SHIFT =====
class Shift {
  +id: int
  +shift_number: string
  +opened_by: int
  +closed_by: int|null
  +start_time: datetime
  +end_time: datetime|null
  +status: string
  +initial_cash: decimal
  +final_cash: decimal|null
  +total_sales: decimal
  +total_refunds: decimal
  +total_discounts: decimal
}

' ===== INVENTORY LOG & NOTIFIKASI =====
class InventoryLog {
  +id: int
  +material_id: int
  +material_batch_id: int|null
  +user_id: int
  +action: string
  +quantity_change: float
  +quantity_after: float
  +reference_type: string
  +reference_id: int
  +note: string
}

class Notification {
  +id: int
  +user_id: int
  +title: string
  +body: string
  +type: string
  +is_read: bool
  +status: string
}

' ===== RELASI =====
Material "1" *-- "0..*" MaterialDetail : has
Material "1" *-- "0..*" MaterialBatch : has
MaterialDetail "*" --> "1" Unit
MaterialBatch "*" --> "1" Unit

Expense "*" --> "1" Supplier
Expense "1" *-- "1..*" ExpenseDetail
ExpenseDetail "*" --> "1" Material
ExpenseDetail "*" --> "1" Unit

Product "1" *-- "0..*" ProductComposition
Product "1" *-- "0..*" OtherCost
Product "*" --> "*" Category : product_categories
ProductComposition "*" --> "1" Material
ProductComposition "*" --> "1" Unit
OtherCost "*" --> "1" TypeCost

Production "1" *-- "1..*" ProductionDetail
Production "*" --> "0..*" User : production_workers
Production "*" --> "0..1" Transaction
ProductionDetail "*" --> "1" Product

Transaction "*" --> "1" User : kasir
Transaction "*" --> "0..1" Shift
Transaction "1" *-- "1..*" TransactionDetail
Transaction "1" *-- "1..*" Payment
TransactionDetail "*" --> "1" Product
Payment "*" --> "1" PaymentChannel

Shift "*" --> "1" User : opened_by
InventoryLog "*" --> "1" Material
InventoryLog "*" --> "0..1" MaterialBatch
InventoryLog "*" --> "1" User
Notification "*" --> "1" User

@enduml
